hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_pair_bad.php
<?hh
function f(): void {
  $f = ($v ==> $v["a"]);
  $f(Pair {"a", "b"});
}
